@@ -34,4 +34,4 @@ scheduled-update-checker-interval: 45
 
 ### Config updater ###
 #Do not modify this, otherwise plugin may not work properly
-v: Pre-alpha0.8.2
+v: Alpha0.1
